--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ h2 {
     padding-top: 3%;
     text-align: center;
     border-radius: 10px;
-    font-size: 25px;
+    font-size: 20px;
 }
 
 .keyboard {
@@ -154,6 +154,17 @@ button {
     margin-top: 20px;
 }
 
+ul {
+    list-style: none; /* Remove default bullets */
+    padding: 0;
+}
+
+li {
+    background: url('bulb.gif') no-repeat left center;
+    background-size: 30px 30px; 
+    padding-left: 30px; 
+    line-height: 1.2;
+}
 /* Responsive styles */
 @media (max-width: 1024px) {
     .card {
